--- a/src/app/user-countries/user-countries.component.html
+++ b/src/app/user-countries/user-countries.component.html
@@ -53,28 +53,35 @@
 
   <form [formGroup]="searchResultForm" (ngSubmit)="saveChanges()">
 
-    <table>
+    <table mat-table [dataSource]="searchResults$ | async">
+      <ng-container matColumnDef="user">
+        <th mat-header-cell *matHeaderCellDef> User </th>
+        <td mat-cell *matCellDef="let item"> {{ item.user.name }} </td>
+      </ng-container>
 
-      <tr>
-        <th>User</th>
-        <th>Country</th>
-        <th>Visit</th>
-        <th>Has visa</th>
-      </tr>
+      <ng-container matColumnDef="country">
+        <th mat-header-cell *matHeaderCellDef> Country </th>
+        <td mat-cell *matCellDef="let item"> {{ item.country.name }} </td>
+      </ng-container>
 
-      <tr *ngFor="let row of (searchResults$ | async); let i=index" >
-        <td>{{ row.user.name }}</td>
-        <td>{{ row.country.name }}</td>
-        <td formArrayName="visited">
+      <ng-container matColumnDef="visited" formArrayName="visited">
+        <th mat-header-cell *matHeaderCellDef> Visited </th>
+        <td mat-cell *matCellDef="let item; let i=index">
           <mat-checkbox [formControlName]="i"></mat-checkbox>
         </td>
-        <td formArrayName="hasVisa">
+      </ng-container>
+
+      <ng-container matColumnDef="hasVisa" formArrayName="hasVisa">
+        <th mat-header-cell *matHeaderCellDef> Has Visa </th>
+        <td mat-cell *matCellDef="let item; let i=index">
           <mat-checkbox [formControlName]="i"></mat-checkbox>
         </td>
-      </tr>
+      </ng-container>
 
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
+    <br/>
     <button mat-raised-button color="primary">save</button>
   </form>
 
