--- a/src/app/user-countries/user-countries.component.html
+++ b/src/app/user-countries/user-countries.component.html
@@ -53,33 +53,33 @@
 
   <form [formGroup]="searchResultForm" (ngSubmit)="saveChanges()">
 
-    <table mat-table [dataSource]="searchResults$ | async">
+    <table mat-table class="table" [dataSource]="searchResults$ | async">
       <ng-container matColumnDef="user">
-        <th mat-header-cell *matHeaderCellDef> User </th>
-        <td mat-cell *matCellDef="let item"> {{ item.user.name }} </td>
+        <th class="table__cell" mat-header-cell *matHeaderCellDef> User </th>
+        <td class="table__cell" mat-cell *matCellDef="let item"> {{ item.user.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="country">
-        <th mat-header-cell *matHeaderCellDef> Country </th>
-        <td mat-cell *matCellDef="let item"> {{ item.country.name }} </td>
+        <th class="table__cell" mat-header-cell *matHeaderCellDef> Country </th>
+        <td class="table__cell" mat-cell *matCellDef="let item"> {{ item.country.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="visited" formArrayName="visited">
-        <th mat-header-cell *matHeaderCellDef> Visited </th>
-        <td mat-cell *matCellDef="let item; let i=index">
+        <th class="table__cell" mat-header-cell *matHeaderCellDef> Visited </th>
+        <td class="table__cell" mat-cell *matCellDef="let item; let i=index">
           <mat-checkbox [formControlName]="i"></mat-checkbox>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="hasVisa" formArrayName="hasVisa">
-        <th mat-header-cell *matHeaderCellDef> Has Visa </th>
-        <td mat-cell *matCellDef="let item; let i=index">
+        <th class="table__cell" mat-header-cell *matHeaderCellDef> Has Visa </th>
+        <td class="table__cell" mat-cell *matCellDef="let item; let i=index">
           <mat-checkbox [formControlName]="i"></mat-checkbox>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr class="table__row" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr class="table__row" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <br/>
     <button mat-raised-button color="primary">save</button>
