--- a/src/app/user-editor/user-editor.component.html
+++ b/src/app/user-editor/user-editor.component.html
@@ -2,10 +2,12 @@
   <mat-form-field>
     <input type="text" matInput [formControl]="nameFormControl"/>
   </mat-form-field>
-  <button class="button" (click)="onSaveUser()" mat-button color="primary">save</button>
-  <button class="button" (click)="show=false" mat-button color="accent">cancel</button>
+  &nbsp;
+  <button (click)="onSaveUser()" mat-button color="primary">save</button>
+  &nbsp;
+  <button (click)="show=false" mat-button color="accent">cancel</button>
 </ng-container>
 <ng-template #info>
-  {{ user.name }}
+  {{ user.name }}&nbsp;
   <button class="button" (click)="show=true" mat-button color="primary">edit</button>
 </ng-template>
